--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 					</h3>
 				</div>
 				<div class="nav-links flex gap-10">
-					<a href="admin.html">Admin</a>
-					<a href="cart.html">Cart</a>
+					<a href="pages/admin.html">Admin</a>
+					<a href="pages/cart.html">Cart</a>
 				</div>
 			</div>
-			<div class="main"></div>
+			<div class="main flex wrap gap-50 p-50 justify-between"></div>
 			<div class="footer"></div>
 		</div>
+		<script type="module" src="index.js"></script>
 	</body>
 </html>
