--- a/pages/admin.html
+++ b/pages/admin.html
@@ -13,6 +13,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<title>Zambet de copil</title>
+		<link rel="stylesheet" href="../css/admin.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -29,9 +30,41 @@
 				</div>
 			</div>
 			<div class="main">
-				<h1>Admin</h1>
+				<h1>Admin Page</h1>
+				<form id="product-form">
+					<div>
+						<label for="name">Product name</label>
+						<input type="text" id="name" />
+					</div>
+					<div>
+						<label for="price">Price</label>
+						<input type="number" id="price" />
+					</div>
+					<div>
+						<label for="image-url">Image URL</label>
+						<input type="text" id="image-url" />
+					</div>
+					<div>
+						<label for="details">Details</label>
+						<input type="text" id="details" />
+					</div>
+					<button id="save-btn">Save product</button>
+				</form>
+				<table id="products-table">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Price</th>
+							<th>Image</th>
+							<th>Edit</th>
+							<th>Delete</th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
 			</div>
 			<div class="footer"></div>
+			<script type="module" src="../js/admin.js"></script>
 		</div>
 	</body>
 </html>
