--- a/pages/details.html
+++ b/pages/details.html
@@ -28,10 +28,9 @@
 					<a href="pages/cart.html">Cart</a>
 				</div>
 			</div>
-			<div class="main">
-				<h1>Details</h1>
-			</div>
+			<div class="main"></div>
 			<div class="footer"></div>
 		</div>
+		<script src="../js/details.js"></script>
 	</body>
 </html>
