--- a/pages/details.html
+++ b/pages/details.html
@@ -24,8 +24,8 @@
 					</h3>
 				</div>
 				<div class="nav-links flex gap-10">
-					<a href="pages/admin.html">Admin</a>
-					<a href="pages/cart.html">Cart</a>
+					<a href="admin.html">Admin</a>
+					<a href="cart.html">Cart</a>
 				</div>
 			</div>
 			<div class="main"></div>
